--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </div>
               <div style="border: 1px solid;width:1280px; height: 100px;">     
                     <h2 style="position: relative; left: 420px;">Video del prototipo</h2>  
-                    <p style="font-size: 20px;position: relative; left: 350px;">Link hacia el video del prototipo: <a href="https://youtube.com/shorts/QOcZezDkdlE?feature=share"> El reló</a>
+                    <p style="font-size: 20px;position: relative; left: 350px;">Link hacia el video del prototipo: <a href="https://youtube.com/shorts/QOcZezDkdlE?feature=share"  target="_blank"> El reló</a>
                     </p>
               
               </div>
